added caches, some endpoints of rest controllers