@@ -4,7 +4,7 @@ import lombok.AllArgsConstructor;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
-import ru.otus.java.spring.project.promotion.domains.promotions.PromoCampaignType;
+import ru.otus.java.spring.project.promotion.enums.PromoCampaignType;
 import ru.otus.java.spring.project.promotion.dtos.request.CampaignHotelParameterRqDto;
 import ru.otus.java.spring.project.promotion.dtos.request.PromoCampaignRqDto;
 import ru.otus.java.spring.project.promotion.dtos.response.PromoCampaignDto;
@@ -17,7 +17,7 @@ import java.util.List;
 
 @AllArgsConstructor
 @SpringBootApplication
-public class PromotionApplication implements CommandLineRunner {
+public class PromotionApplication implements CommandLineRunner  {
 
     private PromoCampaignService promoCampaignService;
 
@@ -42,19 +42,19 @@ public class PromotionApplication implements CommandLineRunner {
         campaignRqDto.setStartDate(LocalDateTime.of(2026, 7, 21, 19, 55));
 
         CampaignHotelParameterRqDto moscow = new CampaignHotelParameterRqDto();
-        moscow.setCityName("Москва");
+        moscow.setCityId(1L);
         moscow.setDateIn(LocalDate.of(2027, 1,1));
         moscow.setDateOut(LocalDate.of(2027, 1,2));
         moscow.setGuests(2);
         moscow.setHotelTypeIds(List.of(1L, 3L));
-        moscow.setFoodTypeIds(List.of(1L, 2L, 3L, 4L));
+        moscow.setFoodTypeIds(List.of(1L));
 
         CampaignHotelParameterRqDto kazan = new CampaignHotelParameterRqDto();
-        kazan.setCityName("Казань");
+        kazan.setCityId(3L);
         kazan.setDateIn(LocalDate.of(2027, 1,1));
         kazan.setDateOut(LocalDate.of(2027, 1,2));
         kazan.setGuests(2);
-        kazan.setHotelTypeIds(Collections.singletonList(3L));
+        kazan.setHotelTypeIds(List.of(1L, 2L, 3L));
         kazan.setFoodTypeIds(List.of(1L, 2L, 3L, 4L));
 
         campaignRqDto.setHotelParameters(List.of(moscow, kazan));
@@ -73,14 +73,14 @@ public class PromotionApplication implements CommandLineRunner {
         campaignRqDto.setProviderIds(Collections.singletonList(1L));
         campaignRqDto.setStartDate(LocalDateTime.of(2026, 7, 21, 19, 56));
 
-        CampaignHotelParameterRqDto moscow = new CampaignHotelParameterRqDto();
-        moscow.setCityName("Москва");
-        moscow.setDateIn(LocalDate.of(2027, 1,1));
-        moscow.setDateOut(LocalDate.of(2027, 1,2));
-        moscow.setGuests(4);
-        moscow.setHotelTypeIds(List.of(1L, 3L));
+        CampaignHotelParameterRqDto campaignParameter = new CampaignHotelParameterRqDto();
+        campaignParameter.setCityId(1L);
+        campaignParameter.setDateIn(LocalDate.of(2027, 1,1));
+        campaignParameter.setDateOut(LocalDate.of(2027, 1,2));
+        campaignParameter.setGuests(2);
+        campaignParameter.setHotelTypeIds(List.of(1L, 3L));
 
-        campaignRqDto.setHotelParameters(Collections.singletonList(moscow));
+        campaignRqDto.setHotelParameters(Collections.singletonList(campaignParameter));
         PromoCampaignDto promoCampaign = promoCampaignService.save(campaignRqDto);
 
         Thread.sleep(5000);
